<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playview_fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:textAlignment="center"
        android:textSize="15sp" />

    <Button
        android:id="@+id/start_game"
        android:layout_width="match_parent"
        android:layout_height="72sp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:background="@drawable/button"
        android:text="@string/start_game"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/winning_hole"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:text="@string/winning_hole"
        android:textColor="@color/green"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/wh_tv"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:textColor="@color/green"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="5"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="6"
        android:text="@string/player1"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/player1_shot_selected"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="7"
        android:text="@string/shot_selected"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/player1_shot_selected_tv"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="7"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/player1_holeshot"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="8"
        android:text="@string/hole_shot"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/player1_holeshot_tv"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="8"
        android:text=""
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="9"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="10"
        android:text="@string/player2"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/player2_shot_selected"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="11"
        android:text="@string/shot_selected"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/player2_shot_selected_tv"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="11"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/player2_holeshot"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="12"
        android:text="@string/hole_shot"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/player2_holeshot_tv"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="12"
        android:textColor="@color/blue"
        android:textSize="20sp" />

</GridLayout>


